# archivist

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: discord_message.rs  main.rs  meili_search.rs
