[package]
name = "archivist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
meilisearch-sdk = "0.15"

serde = { version="1.0",   features = ["derive"] }
dotenv = "0.15.0"
time = { version = "0.3.9", features = ["macros"] }
uuid = {  version ="1.0.0", features = ["v4", "serde"]}